--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.3.3",
-    "debug": "~2.0.0",
+    "debug": ">=2.6.9",
     "dotenv": "^8.2.0",
-    "ejs": "~0.8.5",
+    "ejs": ">=2.5.5",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "moment": "^2.24.0",
     "mongodb": "^3.3.3",
     "mongoose": "^5.7.8",
     "morgan": "^1.9.1",
-    "request": "^2.65.0",
+    "request": ">=2.68.0",
     "serve-favicon": "^2.5.0",
     "sessionstore": "^1.3.7",
     "twilio": "^3.35.0"
